runtime/tests/snapshots/parse_tree_snapshots__nested_precedence_debug.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: "safe_arith_parse_debug(\"1-2*3\")"
---
Ok(
    Sub(
        Number(
            1,
        ),
        (),
        Mul(
            Number(
                2,
            ),
            (),
            Number(
                3,
            ),
        ),
    ),
)
