runtime/tests/snapshots/parse_tree_snapshots__nested_precedence_sexpr.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: "safe_arith_parse(\"1-2*3\")"
---
(sub (number 1) (mul (number 2) (number 3)))
