runtime/tests/snapshots/parse_tree_snapshots__simple_subtraction_debug.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: "safe_arith_parse_debug(\"1-2\")"
---
Ok(
    Sub(
        Number(
            1,
        ),
        (),
        Number(
            2,
        ),
    ),
)
