runtime/tests/snapshots/parse_tree_snapshots__simple_subtraction_sexpr.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: "safe_arith_parse(\"1-2\")"
---
(sub (number 1) (number 2))
