runtime/tests/snapshots/parse_tree_snapshots__single_number_debug.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: result
---
Ok(
    Number(
        42,
    ),
)
