runtime/tests/snapshots/parse_tree_snapshots__whitespace_comparison.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: output
---
compact:  (sub (number 1) (number 2))
spaced:   (sub (number 1) (number 2))
extra:    (sub (number 1) (number 2))
