runtime/tests/snapshots/parse_tree_snapshots__zero_sexpr.snap
---
source: runtime/tests/parse_tree_snapshots.rs
expression: arith_result_to_sexpr(&result)
---
(number 0)
